FakeVim: Alias C-w C-h/j/k/l to C-w h/j/k/l

In Vim land do as Vim does.

Change-Id: I4172039804fbee2c596f02587028943ac9845164
Task-number: QTCREATORBUG-20923
Reviewed-by: Christian Stenger <christian.stenger@qt.io>